--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -54,6 +54,10 @@
         background-blend-mode: screen;
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         -webkit-clip-path:  polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        // dibawah ini sebagai alternatif jikaalah overflow tdk bisa menjadi solusi border radius gambar dikarnakan adanya clip parh
+        // oleh karena itu bisa dibackup edngan set manual tiap pojok gambarnya(pada kasus ini utk pojok ats kanan kiri
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
         &--1 {
             background-image: 
                 linear-gradient(
@@ -61,6 +65,24 @@
                     $color-secondary-light, 
                     $color-secondary-dark),
                 url(../img/nat-5.jpg)
+            ;
+        }
+        &--2 {
+            background-image: 
+                linear-gradient(
+                    to right bottom, 
+                    $color-primary-light, 
+                    $color-primary-dark),
+                url(../img/nat-6.jpg)
+            ;
+        }
+        &--3 {
+            background-image: 
+                linear-gradient(
+                    to right bottom, 
+                    $color-tertiary-light, 
+                    $color-tertiary-dark),
+                url(../img/nat-7.jpg)
             ;
         }
     }
@@ -88,6 +110,20 @@
                 rgba($color-secondary-dark, .85)
             );
         }
+        &-2 {
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-primary-light, .85), 
+                rgba($color-primary-dark, .85)
+            );
+        }
+        &-3 {
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-tertiary-light, .85), 
+                rgba($color-tertiary-dark, .85)
+            );
+        }
     }
 
     &__detail {
@@ -104,5 +140,29 @@
                 }
             }
         }
+    }
+
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+    &__price-box {
+        text-align: center;
+        margin-bottom: 8rem;
+    }
+    
+    &__price-only {
+        color: $color-white;
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+    &__price-value {
+        font-size: 8rem;
+        color: $color-white;
+        font-weight: 100;
     }
 }
