--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@ dark green : #28b485
 @import "components/composition";
 @import "components/feature-box";
 @import "components/cards";
+@import "components/story";
 
 @import "pages/home";
 
