--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@ dark green : #28b485
 @import "components/feature-box";
 @import "components/cards";
 @import "components/story";
+@import "components/form";
 @import "components/bg-video";
 
 @import "pages/home";
