--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@ dark green : #28b485
 @import "components/story";
 @import "components/form";
 @import "components/bg-video";
+@import "components/popup";
 
 @import "pages/home";
 
