feat : add responsive media query at base, typography, layout(header, grid,navigation, & footer)

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -5,6 +5,15 @@
     
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include res(tab_port) {
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+
+    @include res(tab_port) {
+        max-width: 50rem;
+        padding: 0 3rem;
     }
 
     @include clearfix;
@@ -14,6 +23,14 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+            @include res(tab_port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include res(tab_port) {
+            width: 100% !important;
         }
     }
     .col-1-of-2 {
