--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,40 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+// media query
+
+// Phone: 0- 600px
+// Tablet potrait: 600- 1200px
+// Tablet landscape: 900- 1200px
+// our normal style(desktop): 1200px - 1800px
+// Big desktop: 1800 ++
+
+
+/*
+breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px , use em is more effective in media query
+ORDER: BASE > TYPO > GENERAL LAYOUT  + GRID > PAGE LAYOUT > COMPONENT
+*/
+
+@mixin res($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content }; //600px
+    }
+    @if $breakpoint == tab_port {
+        @media (max-width: 56.25em) { @content }; //900px
+    }
+    @if $breakpoint == tab_land {
+        @media (max-width: 75em) { @content }; //1200px
+    }
+    @if $breakpoint == big_desktop {
+        @media (min-width: 112.5em) { @content }; //1800px
+    }
+
+}
