--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     /* font-size: 1; */
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -22,6 +21,10 @@ body {
         animation-duration: 1s;
         animation-timing-function: ease-out;
         /* animation-delay: 3s; */
+        @include res(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub {
@@ -32,6 +35,9 @@ body {
         animation-name: moveInRight;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+        @include res(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -45,6 +51,13 @@ body {
     letter-spacing: .2rem;
     transition: all .2s;
 
+    @include res(tab-port) {
+        font-size: 3rem;
+    }
+    
+    @include res(phone) {
+        font-size: 2.5rem;
+    }
     &:hover {
         transform: skewY(2deg) skewX(2deg) scale(1.1);
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
