--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include res(tab_port) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
@@ -18,6 +22,11 @@
         border-top: 1px solid $color-grey-light-2;
         padding-top: 2rem;
         display: inline-block;
+
+        @include res(tab_port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -37,6 +46,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+        @include res(tab_port) {
+            width: 100%;
+            text-align: center;
+            float: none;
+        }
     }
 
     &__link {
