--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -9,19 +9,40 @@
         transition: all .2s;
         outline-offset: 2rem;
 
+        @include res(tab_port) {
+            float: left;
+            position: relative;
+            width: 33.333333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .4);
+        }
+
         &--p1 {
             left: 0;
             top: -2rem;
+            @include res(tab_port) {
+                top: 0;
+                transform: scale(1.2);
+            }
         }
     
         &--p2 {
             right: 0;
             top: 2rem;
+            @include res(tab_port) {
+                top: 0;
+                transform: scale(1.3);
+                z-index: 1000;
+            }
         }
     
         &--p3 {
             left: 20%;
             top: 10rem;
+            @include res(tab_port) {
+                left: 0;
+                top: 1rem;
+                transform: scale(1.1);
+            }
         }
 
         &:hover {
