--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,10 @@
     box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .15);
     transition: transform .3s;
 
+    @include res(tab_port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
@@ -14,6 +18,9 @@
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent;
+        @include res(tab_port) {
+            margin-bottom: 0;
+        }
     }
 
     &__text {
