--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
     margin-top: -20rem;
     background-color: $color-grey-light-1;
     padding: 25rem 0;
+
+    @include res(tab_port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-feature {
@@ -20,23 +24,37 @@
     & > * {
         transform: skewY(7deg);
     }
+
+    @include res(tab_port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-tours {
     margin-top: -12rem;
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
+
+    @include res(tab_port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     position: relative;
     padding: 15rem 0;
     // background-color: $color-grey-light-1;
+    @include res(tab_port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+    @include res(tab_port) {
+        padding: 10rem 0;
+    }
 }
 
 .book {
