--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -18,6 +18,10 @@
         color: inherit;
         transition: all .3s;
 
+        @include res(tab_port) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -55,6 +59,10 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+        @include res(tab_port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-label {
