--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,6 +8,16 @@
     font-size: $default-font-size;
     padding-left: 9rem;
     transform: skewX(-12deg);
+
+    @include res(tab_port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include res(phone) {
+        transform: skewX(0);
+    }
     
     &__shape {
         width: 15rem;
@@ -20,6 +30,9 @@
         -webkit-clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        @include res(phone) {
+            transform: translateX(-3rem) skewX(0);
+        }
     }
     
     &__img {
@@ -31,6 +44,9 @@
 
     &__text {
         transform: skewX(12deg);
+        @include res(phone) {
+            transform: skewX(0);
+        }
     }
 
     &__caption {
