--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,10 +6,15 @@
     left: 0;
     background-color: rgba($color-black, .8);
     z-index: 9999;
-
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    // jika browser support fitur css yg ada di kurung, maka yg didalem bracket akan di implementasikan
+    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, .3);
+    }
 
     &__content {
         width: 75%;
