--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -24,12 +24,16 @@
         height: 15rem;
         background-color: royalblue;
         float: left;
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);;
-        -webkit-clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        overflow: hidden;
+        @supports (clip-path: polygon(0 0)) or (-wbekit-clip-path: polygon(0 0)) {
+             clip-path: circle(50% at 50% 50%);
+             -webkit-clip-path: circle(50% at 50% 50%);
+             -webkit-shape-outside: circle(50% at 50% 50%);
+             shape-outside: circle(50% at 50% 50%);
+             border-radius: none;
+        }
         @include res(phone) {
             transform: translateX(-3rem) skewX(0);
         }
