--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,9 +23,9 @@
     // jika tdk mempertimbangkan dpi, tapi layar lebih dari 2000px(125em) maka implemen ini
     // note :, koma pada media kuqry syntak bisa diartikan "or"
     // -webkit-min-device-pixel-ratio uses by safari, they didnt support min-resolution
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),
-        (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-        (min-width: 125em) {
+    @media  only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+         only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+         only screen and (min-width: 125em) {
         background-image: 
         linear-gradient(
             to right bottom, 
